Changed Lists.of to ImmutableList.of for java8